_sass/minima/_layout.scss
/*
 *   Copyright (c) 2022 Nazmul Idris
 *   All rights reserved.
 *
 *   Licensed under the Apache License, Version 2.0 (the "License");
 *   you may not use this file except in compliance with the License.
 *   You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 *   Unless required by applicable law or agreed to in writing, software
 *   distributed under the License is distributed on an "AS IS" BASIS,
 *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *   See the License for the specific language governing permissions and
 *   limitations under the License.
 */

/**
 * Site header
 */
.site-header {
  border-top: 5px solid $colorGreyLighter;
  border-bottom: 1px solid $colorGreyLight;
  min-height: $spacingUnit * 1.865;

  // Positioning context for the mobile navigation icon
  position: relative;
}

.site-title {
  @include relative-font-size(1.625);
  font-weight: 300;
  line-height: $baseLineHeight * $baseFontSize * 2.25;
  letter-spacing: -1px;
  margin-bottom: 0;
  float: left;

  &,
  &:visited {
    color: $colorGreyLighter;
  }
}

.site-nav {
  float: right;
  //line-height: $baseLineHeight * $baseFontSize * 1.2;
  line-height: 2rem;

  .nav-trigger {
    display: none;
  }

  .menu-icon {
    display: none;
  }

  .page-link {
    color: $textColor;
    line-height: $baseLineHeight;

    // Gaps between nav items, but not on the last one
    &:not(:last-child) {
      margin-right: 20px;
    }
  }

  @include media-query($onPalm) {
    position: absolute;
    top: 9px;
    right: $spacingUnit / 2;
    background-color: transparentize($backgroundColor, 0.2);
    border: 1px solid $colorGreyLight;
    border-radius: 5px;
    text-align: right;

    label[for="nav-trigger"] {
      display: block;
      float: right;
      width: 36px;
      height: 36px;
      z-index: 2;
      cursor: pointer;
    }

    .menu-icon {
      display: block;
      float: right;
      width: 36px;
      height: 26px;
      line-height: 0;
      padding-top: 10px;
      text-align: center;

      > svg {
        fill: $brandColor;
      }
    }

    input ~ .trigger {
      clear: both;
      display: none;
    }

    input:checked ~ .trigger {
      $paddingHorizontal: 1ch;

      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      justify-content: flex-end;
      align-items: flex-end;
      padding-left: $paddingHorizontal;
      padding-right: $paddingHorizontal;
    }

    .page-link {
      display: block;
      padding: 5px 10px;

      &:not(:last-child) {
        margin-right: 0;
      }
      margin-left: 20px;
    }
  }
}

/**
 * Site footer
 */
.site-footer {
  border-top: 1px solid $colorGreyLight;
  padding: $spacingUnit 0;
}

.footer-heading {
  @include relative-font-size(1.125);
  margin-bottom: $spacingUnit / 2;
}

.contact-list,
.social-media-list {
  list-style: none;
  margin-left: 0;
}

.footer-col-wrapper {
  @include relative-font-size(0.9375);
  color: $colorGrey;
  margin-left: -$spacingUnit / 2;
  @extend %clearfix;
}

.footer-col {
  float: left;
  margin-bottom: $spacingUnit / 2;
  padding-left: $spacingUnit / 2;
}

.footer-col-1 {
  width: -webkit-calc(35% - (#{$spacingUnit} / 2));
  width: calc(35% - (#{$spacingUnit} / 2));
}

.footer-col-2 {
  width: -webkit-calc(20% - (#{$spacingUnit} / 2));
  width: calc(20% - (#{$spacingUnit} / 2));
}

.footer-col-3 {
  width: -webkit-calc(45% - (#{$spacingUnit} / 2));
  width: calc(45% - (#{$spacingUnit} / 2));
}

@include media-query($onLaptop) {
  .footer-col-1,
  .footer-col-2 {
    width: -webkit-calc(50% - (#{$spacingUnit} / 2));
    width: calc(50% - (#{$spacingUnit} / 2));
  }

  .footer-col-3 {
    width: -webkit-calc(100% - (#{$spacingUnit} / 2));
    width: calc(100% - (#{$spacingUnit} / 2));
  }
}

@include media-query($onPalm) {
  .footer-col {
    float: none;
    width: -webkit-calc(100% - (#{$spacingUnit} / 2));
    width: calc(100% - (#{$spacingUnit} / 2));
  }
}

/**
 * Page content
 */
.page-content {
  padding: $spacingUnit 0;
  flex: 1;
}

.page-heading {
  @include relative-font-size(2);
}

.post-list-heading {
  @include relative-font-size(1.75);
}

.post-list {
  margin-left: 0;
  list-style: none;

  > li {
    margin-bottom: $spacingUnit;
  }
}

.post-meta {
  font-size: $smallFontSize;
  color: $colorGrey;
}

.post-link {
  display: block;
  @include relative-font-size(1.5);
}

/**
 * Posts
 */
.post-header {
  margin-bottom: $spacingUnit;
}

.post-title {
  @include relative-font-size(2.625);
  letter-spacing: -1px;
  line-height: 1;

  @include media-query($onLaptop) {
    @include relative-font-size(2.25);
  }
}

.post-content {
  margin-bottom: $spacingUnit;

  h2 {
    @include relative-font-size(2);

    @include media-query($onLaptop) {
      @include relative-font-size(1.75);
    }
  }

  h3 {
    @include relative-font-size(1.625);

    @include media-query($onLaptop) {
      @include relative-font-size(1.375);
    }
  }

  h4 {
    @include relative-font-size(1.25);

    @include media-query($onLaptop) {
      @include relative-font-size(1.125);
    }
  }
}

